kubernetes/manifests/production/keycloak/manifest.yaml
---
# Source: keycloakx/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: keycloak
  labels:
    helm.sh/chart: keycloakx-7.2.2
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: "26.6.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak
---
# Source: keycloakx/templates/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-http
  namespace: keycloak
  labels:
    helm.sh/chart: keycloakx-7.2.2
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: "26.6.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: http
spec:
  type: ClusterIP
  ports:
    - name: 'http-internal'
      port: 9000
      protocol: TCP
      targetPort: 'http-internal'
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak
---
# Source: keycloakx/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    helm.sh/chart: keycloakx-7.2.2
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: "26.6.4"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloakx
      app.kubernetes.io/instance: keycloak
  replicas: 1
  serviceName: keycloak-headless
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config-startup: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
      labels:
        app.kubernetes.io/name: keycloakx
        app.kubernetes.io/instance: keycloak
    spec:
      containers:
        - name: keycloak
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          image: "quay.io/keycloak/keycloak:26.6.4"
          imagePullPolicy: IfNotPresent
          args:
            - start
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: 'http-internal'
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: '/health/live'
              port: 'http-internal'
              scheme: 'HTTP'
            initialDelaySeconds: 0
            timeoutSeconds: 5
            
          readinessProbe:
            httpGet:
              path: '/health/ready'
              port: 'http-internal'
              scheme: 'HTTP'
            initialDelaySeconds: 10
            timeoutSeconds: 1
            
          startupProbe:
            httpGet:
              path: '/health'
              port: 'http-internal'
              scheme: 'HTTP'
            initialDelaySeconds: 15
            timeoutSeconds: 1
            failureThreshold: 60
            periodSeconds: 5
            
          resources:
            limits:
              cpu: 1500m
              memory: 1536Mi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
      serviceAccountName: keycloak
      securityContext:
        fsGroup: 1000
      enableServiceLinks: true
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: keycloakx
                  app.kubernetes.io/instance: keycloak
                matchExpressions:
                  - key: app.kubernetes.io/component
                    operator: NotIn
                    values:
                      - test
              topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: keycloakx
                    app.kubernetes.io/instance: keycloak
                  matchExpressions:
                    - key: app.kubernetes.io/component
                      operator: NotIn
                      values:
                        - test
                topologyKey: topology.kubernetes.io/zone
        
      terminationGracePeriodSeconds: 60
      volumes:

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: application
    alb.ingress.kubernetes.io/healthcheck-path: /health/ready
    alb.ingress.kubernetes.io/healthcheck-port: "9000"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: auth.dystopia.city
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: alb
  rules:
  - host: auth.dystopia.city
    http:
      paths:
      - backend:
          service:
            name: keycloak-http
            port:
              number: 80
        path: /
        pathType: Prefix
